# ULCC1

./: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
cmake/: EnableSIMD.cmake
examples/data/: sample.json
examples/main/: main.cpp
examples/tests/: CMakeLists.txt  test_barnes.cpp  test_fitting.cpp  test_sim_input.cpp  test_test.cpp
include/: basesolver.hpp  data.hpp  fileutils.hpp  fitting.hpp  indata.hpp  matlayer.hpp  outdata.hpp  simulation.hpp  visitor.hpp
mat/: Mg_palik.csv  ag.csv  air.csv  alq3_literature2.csv  glass_no_loss.csv  pedot.csv  test_ito.csv  tpd.csv
src/: basesolver.cpp  fileutils.cpp  fitting.cpp  indata.cpp  material.cpp  matlayer.cpp  outdata.cpp  simulation.cpp  visitor.cpp
test/: CMakeLists.txt  test1.cpp
